# halo2_vc

./: Cargo.toml
halo2/halo2_proofs/src/: multicore.rs
halo2/halo2_proofs/tests/: plonk_api.rs
src/: circuit.rs  generator.rs  modified_wip.rs  optimized_wip.rs  permissible.rs  select.rs  weighted_inner_product.rs
