[package]
name = "halo2_vc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "curvetree"
path = "src/modified_wip.rs"

[dependencies]
halo2_proofs = { path = "./halo2/halo2_proofs" }
halo2_gadgets = { path = "./halo2/halo2_gadgets" }
rand_core = { version = "0.6", features = ["getrandom"] }
ff = "0.13"
pasta_curves = "0.5"
rand = "0.8"
bulletproofs-plus = "0.1.0"
group = "0.13"


